# V4_Shaders

./: CMakeLists.txt  README.md  main.cpp
shaders/: compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
